--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/target
 /.settings
 .classpath
 .project
@@ -8,3 +7,8 @@
 node_modules
 node
 /src/main/resources/dist/*
+# Ignore entire target folder
+target/
+!target/confluence/webapp/WEB-INF/web.xml
+!target/confluence/home/confluence.cfg.xml
+!target/container/tomcat9x/apache-tomcat-9.0.63/conf/server.xml
